# benchmarks

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agent/: README.md
.agent/include/: project-context.md
.agent/phases/: current.md
.agent/policy/: README.md  project-overview.md
.agent/rules/: methodology.md
.github/workflows/: benchmarks.yml
config/: benchmark_config.json  comparison_targets.json  environments.json  gpu_targets.json
harness/: __init__.py  agam_harness.py  base_harness.py  c_harness.py  cpp_harness.py  go_harness.py  python_harness.py  rust_harness.py
infrastructure/: __init__.py  benchmark_runner.py  compiler_test_runner.py  gpu_runner.py  statistical_analyzer.py  utils.py
results/: README.md
suites/01_algorithms/: binary_search.agam  edit_distance.agam  fibonacci.agam  prime_sieve.agam  quicksort.agam
suites/02_numerical_computation/: fft.agam  matrix_multiply.agam  monte_carlo_pi.agam  polynomial_eval.agam  tensor_operations.agam
suites/03_data_structures/: btree_operations.agam  hashmap_operations.agam  linked_list.agam  ring_buffer.agam
suites/05_ml_primitives/: autodiff.agam  convolution.agam  softmax.agam  tensor_matmul.agam
suites/06_gpu_compute/: conv2d_pytorch.py  conv2d_tensorflow.py  elementwise_cupy.py  elementwise_numpy.py  elementwise_pytorch.py  matmul_cupy.py  matmul_numba.py  matmul_numpy.py  matmul_pytorch.py  matmul_tensorflow.py  reduction_cupy.py  reduction_numpy.py  (+5 more)
tests/: test_benchmarks.py  test_compiler_pipeline.py  test_gpu_benchmarks.py  test_harness.py  test_statistical_analysis.py
(+125 files in other folders)
